--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -9,6 +9,7 @@ html, body
 	height: 100%
 
 body
+	height: 100vh
 	background-color: $color-bisque
 	color: $color-white
 	font-family: 'Roboto', sans-serif
