update main page

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -9,9 +9,7 @@ html, body
 	height: 100%
 
 body
-	height: 100vh
-	background-color: $color-bisque
-	color: $color-white
+	color: $color-black
 	font-family: 'Roboto', sans-serif
     font-size: 16px
     font-weight: 400
@@ -34,3 +32,6 @@ a
 	text-decoration: none
 	cursor: pointer
 	color: $color-white
+
+input:focus
+	outline: none
