--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,38 +2,93 @@
 @import "base"
 @import "vars"
 
-.site__header
-	position: absolute
-	z-index: 10
-	left: 0
-	right: 0
-	background-color: inherit
-
-.container 
-	max-width: 1200px
+.page-wrap
+	display: flex
+	flex-direction: column
+	max-width: 1980px
+	height: 100%
 	margin: 0 auto
-	padding: $base-padding
-	h1
-		color: #000
-
-/* Слайдер */
-.slider__item
-	height: 100vh
-	background-repeat: no-repeat
-	background-size: cover
-	background-position: center
-
-/* Футер */
-.footer
-	width: 100%
-	margin: 0 auto
-	color: $color-black
-	text-align: center
-	height: 64px
-	font-size: 16px
-	font-weight: lighter
-	line-height: 1.25
-	background-color: $color-bisque
-	padding: 24px 0 24px 0
-	position: absolute
-	bottom: 0
+	position: relative
+	.container 
+		max-width: 1980px
+		margin: 0 auto
+		padding: $base-padding
+	/* Header */
+	.header
+		width: 100%
+		height: 70vh
+		position: relative
+		background-image: url(../img/main-bg.png)
+		background-repeat: no-repeat
+		background-size: cover
+		background-position: center
+		z-index: 999
+		&::after
+			content: ''
+			z-index: -1
+			position: absolute
+			width: 466px
+			height: 466px
+			left: -100px
+			top: -270px
+			background-color: $color-ocean-blue
+			border-radius: 50%
+		.nav
+			padding: 40px 65px 0 45px
+			display: flex
+			justify-content: space-between
+			&__buttons
+				display: flex
+				.btn
+					text-transform: uppercase
+					font-size: 14px
+					width: 180px
+					height: 60px
+					display: flex
+					align-items: center
+					justify-content: center
+					cursor: pointer
+					border-radius: 36px
+					background-color: transparent
+					color: $color-ocean-blue
+					border: 2px solid $color-ocean-blue
+					padding: 10px 10px
+					transition: all 0.2s ease-in
+					&:hover
+						color: $color-white
+						background-color: $color-ocean-blue
+				.black
+					color: $color-black
+					border: none
+					padding-right: 40px
+					&:hover
+						color: $color-ocean-blue
+						background-color: transparent
+		.content
+			width: 100%
+			height: 100%
+			padding: 120px 100px
+			max-width: 1260px
+			margin: 0 auto
+			.content-title
+				font-size: 54px
+				line-height: 60px
+				font-weight: normal
+				color: #1E2D52
+				margin: 0
+			.content-subtitle
+				margin: 0
+				font-size: 28px
+				color: #3C3C3C
+				opacity: 0.4
+	.footer
+		position: absolute
+		bottom: 0
+		font-size: 18px
+		font-weight: normal
+		padding: 20px 0
+		width: 100%
+		height: 80px
+		.footer-copy
+			text-align: center
+			color: #3C3C3C
