--- a/app/css/main.css
+++ b/app/css/main.css
@@ -120,9 +120,10 @@ input:focus {
     .page-wrap .header .content {
       width: 100%;
       height: 100%;
-      padding: 120px 100px;
+      padding-top: 120px;
       max-width: 1260px;
-      margin: 0 auto; }
+      margin: 0 auto;
+      position: relative; }
       .page-wrap .header .content .content-title {
         font-size: 54px;
         line-height: 60px;
@@ -134,6 +135,16 @@ input:focus {
         font-size: 28px;
         color: #3C3C3C;
         opacity: 0.4; }
+    .page-wrap .header .content-search {
+      position: absolute;
+      bottom: -70%;
+      width: 100%;
+      margin: 0 auto;
+      height: 90px;
+      padding: 10px;
+      border-radius: 8px;
+      background-color: #fff;
+      box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2); }
   .page-wrap .footer {
     position: absolute;
     bottom: 0;
