--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -3,6 +3,7 @@ $color-bisque: #F3EBE9
 $color-white: #fff
 $color-black: #000
 $color-ocean-blue: #00C1DA
+$color-gray: #3C3C3C
 
 $base-padding: 0 15px 0 15px
 $base-margin: 15px
