--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -67,9 +67,10 @@
 		.content
 			width: 100%
 			height: 100%
-			padding: 120px 100px
+			padding-top: 120px
 			max-width: 1260px
 			margin: 0 auto
+			position: relative
 			.content-title
 				font-size: 54px
 				line-height: 60px
@@ -79,8 +80,18 @@
 			.content-subtitle
 				margin: 0
 				font-size: 28px
-				color: #3C3C3C
+				color: $color-gray
 				opacity: 0.4
+		.content-search
+			position: absolute
+			bottom: -70%
+			width: 100%
+			margin: 0 auto
+			height: 90px
+			padding: 10px
+			border-radius: 8px
+			background-color: $color-white
+			box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2)
 	.footer
 		position: absolute
 		bottom: 0
@@ -91,4 +102,4 @@
 		height: 80px
 		.footer-copy
 			text-align: center
-			color: #3C3C3C
+			color: $color-gray
