--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,6 +12,7 @@
 	.container 
 		max-width: 1980px
 		margin: 0 auto
+		height: 100%
 		padding: $base-padding
 	/* Header */
 	.header
@@ -84,7 +85,7 @@
 				opacity: 0.4
 		.content-search
 			position: absolute
-			bottom: -70%
+			bottom: 10%
 			width: 100%
 			margin: 0 auto
 			height: 90px
