--- a/app/css/main.css
+++ b/app/css/main.css
@@ -121,13 +121,13 @@ input:focus {
     .page-wrap .header .content {
       width: 100%;
       height: 100%;
-      padding-top: 120px;
+      padding-top: 160px;
       max-width: 1260px;
       margin: 0 auto;
       position: relative; }
       .page-wrap .header .content .content-title {
         font-size: 54px;
-        line-height: 60px;
+        line-height: 70px;
         font-weight: normal;
         color: #1E2D52;
         margin: 0; }
@@ -136,16 +136,43 @@ input:focus {
         font-size: 28px;
         color: #3C3C3C;
         opacity: 0.4; }
-    .page-wrap .header .content-search {
+    .page-wrap .header .content-seach-input {
       position: absolute;
-      bottom: 10%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      bottom: 15%;
       width: 100%;
       margin: 0 auto;
-      height: 90px;
-      padding: 10px;
-      border-radius: 8px;
-      background-color: #fff;
-      box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2); }
+      background-color: transparent; }
+      .page-wrap .header .content-seach-input .content-search {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 60px;
+        padding: 10px;
+        border-radius: 8px;
+        background-color: #fff;
+        margin-right: 15px;
+        box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2); }
+      .page-wrap .header .content-seach-input .btn {
+        text-transform: uppercase;
+        font-size: 14px;
+        width: 180px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        border-radius: 10px;
+        background-color: #00C1DA;
+        color: #fff;
+        border: none;
+        padding: 10px 10px;
+        transition: all 0.2s ease-in; }
+        .page-wrap .header .content-seach-input .btn:hover {
+          box-shadow: 0 0 100px 5px rgba(0, 193, 218, 0.36); }
   .page-wrap .footer {
     position: absolute;
     bottom: 0;
