--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -68,13 +68,13 @@
 		.content
 			width: 100%
 			height: 100%
-			padding-top: 120px
+			padding-top: 160px
 			max-width: 1260px
 			margin: 0 auto
 			position: relative
 			.content-title
 				font-size: 54px
-				line-height: 60px
+				line-height: 70px
 				font-weight: normal
 				color: #1E2D52
 				margin: 0
@@ -83,16 +83,43 @@
 				font-size: 28px
 				color: $color-gray
 				opacity: 0.4
-		.content-search
+		.content-seach-input
 			position: absolute
-			bottom: 10%
+			display: flex
+			justify-content: space-between
+			align-items: center
+			bottom: 15%
 			width: 100%
 			margin: 0 auto
-			height: 90px
-			padding: 10px
-			border-radius: 8px
-			background-color: $color-white
-			box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2)
+			background-color: transparent
+			.content-search
+				display: flex
+				justify-content: space-between
+				align-items: center
+				width: 100%
+				height: 60px
+				padding: 10px
+				border-radius: 8px
+				background-color: $color-white
+				margin-right: 15px
+				box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2)
+			.btn
+				text-transform: uppercase
+				font-size: 14px
+				width: 180px
+				height: 60px
+				display: flex
+				align-items: center
+				justify-content: center
+				cursor: pointer
+				border-radius: 10px
+				background-color: $color-ocean-blue
+				color: $color-white
+				border: none
+				padding: 10px 10px
+				transition: all 0.2s ease-in
+				&:hover
+					box-shadow: 0 0 100px 5px rgba(0, 193, 218, 0.36)
 	.footer
 		position: absolute
 		bottom: 0
