--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -58,6 +58,7 @@
 					&:hover
 						color: $color-white
 						background-color: $color-ocean-blue
+						box-shadow: 0 0 100px 5px rgba(0, 193, 218, 0.36)
 				.black
 					color: $color-black
 					border: none
@@ -88,7 +89,7 @@
 			display: flex
 			justify-content: space-between
 			align-items: center
-			bottom: 15%
+			bottom: 10%
 			width: 100%
 			margin: 0 auto
 			background-color: transparent
@@ -117,7 +118,7 @@
 				color: $color-white
 				border: none
 				padding: 10px 10px
-				transition: all 0.2s ease-in
+				transition: all 0.4s ease-in
 				&:hover
 					box-shadow: 0 0 100px 5px rgba(0, 193, 218, 0.36)
 	.footer
