update main page

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -66,6 +66,7 @@
 					&:hover
 						color: $color-ocean-blue
 						background-color: transparent
+						box-shadow: none
 		.content
 			width: 100%
 			height: 100%
