--- a/app/css/main.css
+++ b/app/css/main.css
@@ -118,7 +118,8 @@ input:focus {
           padding-right: 40px; }
           .page-wrap .header .nav__buttons .black:hover {
             color: #00C1DA;
-            background-color: transparent; }
+            background-color: transparent;
+            box-shadow: none; }
     .page-wrap .header .content {
       width: 100%;
       height: 100%;
