--- a/app/css/main.css
+++ b/app/css/main.css
@@ -123,7 +123,7 @@ input:focus {
     .page-wrap .header .content {
       width: 100%;
       height: 100%;
-      padding-top: 160px;
+      padding-top: 20vh;
       max-width: 1260px;
       margin: 0 auto;
       position: relative; }
