--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -70,7 +70,7 @@
 		.content
 			width: 100%
 			height: 100%
-			padding-top: 160px
+			padding-top: 20vh
 			max-width: 1260px
 			margin: 0 auto
 			position: relative
