update main page

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -128,8 +128,8 @@ input:focus {
       margin: 0 auto;
       position: relative; }
       .page-wrap .header .content .content-title {
-        font-size: 54px;
-        line-height: 70px;
+        font-size: 5rem;
+        line-height: 6rem;
         font-weight: normal;
         color: #1E2D52;
         margin: 0; }
