--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -75,8 +75,8 @@
 			margin: 0 auto
 			position: relative
 			.content-title
-				font-size: 54px
-				line-height: 70px
+				font-size: 5rem
+				line-height: 6rem
 				font-weight: normal
 				color: #1E2D52
 				margin: 0
