update search input

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -35,3 +35,8 @@ a
 
 input:focus
 	outline: none
+
+::-webkit-input-placeholder
+   color: rgba(60, 60, 60, 0.4)
+   &:focus
+        color: $color-black
