--- a/app/css/main.css
+++ b/app/css/main.css
@@ -55,6 +55,11 @@ a {
 input:focus {
   outline: none; }
 
+::-webkit-input-placeholder {
+  color: rgba(60, 60, 60, 0.4); }
+  ::-webkit-input-placeholder:focus {
+    color: #000; }
+
 .page-wrap {
   display: flex;
   flex-direction: column;
@@ -149,15 +154,38 @@ input:focus {
       background-color: transparent; }
       .page-wrap .header .content-seach-input .content-search {
         display: flex;
-        justify-content: space-between;
         align-items: center;
         width: 100%;
         height: 70px;
-        padding: 10px;
+        padding: 5px;
         border-radius: 8px;
         background-color: #fff;
         margin-right: 15px;
         box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2); }
+        .page-wrap .header .content-seach-input .content-search .search-select {
+          display: flex;
+          flex-basis: 20%;
+          position: relative;
+          height: 100%; }
+          .page-wrap .header .content-seach-input .content-search .search-select::before {
+            content: '';
+            position: absolute;
+            width: 1px;
+            height: 100%;
+            padding: 1px 0;
+            background-color: rgba(151, 151, 151, 0.2);
+            right: 0; }
+        .page-wrap .header .content-seach-input .content-search .search-input {
+          display: flex;
+          flex-basis: 80%; }
+          .page-wrap .header .content-seach-input .content-search .search-input .search {
+            width: 100%;
+            height: 100%;
+            border: 0;
+            font-size: 19px;
+            color: #1E2D52;
+            margin-left: 35px;
+            margin-right: 20px; }
       .page-wrap .header .content-seach-input .btn {
         text-transform: uppercase;
         font-size: 14px;
