--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -96,15 +96,38 @@
 			background-color: transparent
 			.content-search
 				display: flex
-				justify-content: space-between
 				align-items: center
 				width: 100%
 				height: 70px
-				padding: 10px
+				padding: 5px
 				border-radius: 8px
 				background-color: $color-white
 				margin-right: 15px
 				box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2)
+				.search-select
+					display: flex
+					flex-basis: 20%
+					position: relative
+					height: 100%
+					&::before
+						content: ''
+						position: absolute
+						width: 1px
+						height: 100%
+						padding: 1px 0
+						background-color: rgba(151, 151, 151, 0.2)
+						right: 0
+				.search-input
+					display: flex
+					flex-basis: 80%
+					.search
+						width: 100%
+						height: 100%
+						border: 0
+						font-size: 19px
+						color: #1E2D52
+						margin-left: 35px
+						margin-right: 20px
 			.btn
 				text-transform: uppercase
 				font-size: 14px
