--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,20 +1,24 @@
 @font-face
 	font-family: 'roboto-grid'
-	src: url('../fonts/Roboto-Regular.ttf') format('ttf')
+	src: url('../fonts/Roboto-Regular.ttf')
+	font-weight: 400
 
 @font-face
 	font-family: 'roboto-grid'
-	src: url('../fonts/Roboto-Bold.ttf') format('ttf')
-	font-weight: bold
+	src: url('../fonts/Roboto-Bold.ttf')
+	font-weight: 600
 
 @font-face
 	font-family: 'roboto-grid'
-	src: url('../fonts/Roboto-Light.ttf') format('ttf')
+	src: url('../fonts/Roboto-Light.ttf')
+	font-weight: 200
 
 @font-face
 	font-family: 'roboto-grid'
-	src: url('../fonts/Roboto-Medium.ttf') format('ttf')
+	src: url('../fonts/Roboto-Medium.ttf')
+	font-weight: 500
 
 @font-face
 	font-family: 'roboto-grid'
-	src: url('../fonts/Roboto-Black.ttf') format('ttf')
+	src: url('../fonts/Roboto-Black.ttf')
+	font-weight: 700
