--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,23 +1,27 @@
 @font-face {
   font-family: 'roboto-grid';
-  src: url("../fonts/Roboto-Regular.ttf") format("ttf"); }
+  src: url("../fonts/Roboto-Regular.ttf");
+  font-weight: 400; }
 
 @font-face {
   font-family: 'roboto-grid';
-  src: url("../fonts/Roboto-Bold.ttf") format("ttf");
-  font-weight: bold; }
+  src: url("../fonts/Roboto-Bold.ttf");
+  font-weight: 600; }
 
 @font-face {
   font-family: 'roboto-grid';
-  src: url("../fonts/Roboto-Light.ttf") format("ttf"); }
+  src: url("../fonts/Roboto-Light.ttf");
+  font-weight: 200; }
 
 @font-face {
   font-family: 'roboto-grid';
-  src: url("../fonts/Roboto-Medium.ttf") format("ttf"); }
+  src: url("../fonts/Roboto-Medium.ttf");
+  font-weight: 500; }
 
 @font-face {
   font-family: 'roboto-grid';
-  src: url("../fonts/Roboto-Black.ttf") format("ttf"); }
+  src: url("../fonts/Roboto-Black.ttf");
+  font-weight: 700; }
 
 * {
   box-sizing: border-box; }
@@ -29,9 +33,8 @@ html, body {
 
 body {
   color: #000;
-  font-family: "Roboto", sans-serif;
-    font-family-font-size: 16px;
-    font-family-font-weight: 400;
+    color-font-size: 16px;
+    color-font-weight: 400;
   min-width: 320px;
   position: relative;
   line-height: 1.75;
@@ -66,151 +69,113 @@ input:focus {
   max-width: 1980px;
   height: 100%;
   margin: 0 auto;
+  position: relative; }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 100%;
+  padding: 0 20px; }
+
+/* Header */
+.header {
+  width: 100%;
+  height: 100vh;
   position: relative;
-  /* Header */ }
-  .page-wrap .container {
-    max-width: 1980px;
-    margin: 0 auto;
-    height: 100%;
-    padding: 0 15px 0 15px; }
-  .page-wrap .header {
-    width: 100%;
-    height: 70vh;
-    position: relative;
-    background-image: url(../img/main-bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    z-index: 999; }
-    .page-wrap .header::after {
-      content: '';
-      z-index: -1;
-      position: absolute;
-      width: 466px;
-      height: 466px;
-      left: -100px;
-      top: -270px;
-      background-color: #00C1DA;
-      border-radius: 50%; }
-    .page-wrap .header .nav {
-      padding: 40px 65px 0 45px;
-      display: flex;
-      justify-content: space-between; }
-      .page-wrap .header .nav__buttons {
-        display: flex; }
-        .page-wrap .header .nav__buttons .btn {
-          text-transform: uppercase;
-          font-size: 14px;
-          width: 180px;
-          height: 60px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-          border-radius: 36px;
-          background-color: transparent;
-          color: #00C1DA;
-          border: 2px solid #00C1DA;
-          padding: 10px 10px;
-          transition: all 0.2s ease-in; }
-          .page-wrap .header .nav__buttons .btn:hover {
-            color: #fff;
-            background-color: #00C1DA;
-            box-shadow: 0 0 100px 5px rgba(0, 193, 218, 0.36); }
-        .page-wrap .header .nav__buttons .black {
-          color: #000;
-          border: none;
-          padding-right: 40px; }
-          .page-wrap .header .nav__buttons .black:hover {
-            color: #00C1DA;
-            background-color: transparent;
-            box-shadow: none; }
-    .page-wrap .header .content {
-      width: 100%;
-      height: 100%;
-      padding-top: 20vh;
-      max-width: 1260px;
-      margin: 0 auto;
-      position: relative; }
-      .page-wrap .header .content .content-title {
-        font-size: 5rem;
-        line-height: 5.5rem;
-        font-weight: normal;
-        color: #1E2D52;
-        margin: 0; }
-      .page-wrap .header .content .content-subtitle {
-        margin: 0;
-        font-size: 28px;
-        color: #3C3C3C;
-        opacity: 0.4; }
-    .page-wrap .header .content-seach-input {
-      position: absolute;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      bottom: 10%;
-      width: 100%;
-      margin: 0 auto;
-      background-color: transparent; }
-      .page-wrap .header .content-seach-input .content-search {
+  background-image: url(../img/main-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center -60px; }
+  .header .header-nav {
+    height: 94px;
+    background-color: #fff; }
+  .header .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 0px; }
+    .header .nav__menu {
+      display: flex; }
+      .header .nav__menu .menu {
+        list-style-type: none;
         display: flex;
         align-items: center;
-        width: 100%;
-        height: 70px;
-        padding: 5px;
-        border-radius: 8px;
-        background-color: #fff;
-        margin-right: 15px;
-        box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2); }
-        .page-wrap .header .content-seach-input .content-search .search-select {
-          display: flex;
-          flex-basis: 20%;
-          position: relative;
-          height: 100%; }
-          .page-wrap .header .content-seach-input .content-search .search-select::before {
-            content: '';
-            position: absolute;
-            width: 1px;
-            height: 100%;
-            padding: 1px 0;
-            background-color: rgba(151, 151, 151, 0.2);
-            right: 0; }
-        .page-wrap .header .content-seach-input .content-search .search-input {
-          display: flex;
-          flex-basis: 80%; }
-          .page-wrap .header .content-seach-input .content-search .search-input .search {
-            width: 100%;
-            height: 100%;
-            border: 0;
-            font-size: 19px;
-            color: #1E2D52;
-            margin-left: 35px;
-            margin-right: 20px; }
-      .page-wrap .header .content-seach-input .btn {
-        text-transform: uppercase;
-        font-size: 14px;
-        width: 190px;
-        height: 70px;
+        margin: 0;
+        padding: 0; }
+        .header .nav__menu .menu .menu-item {
+          font-size: 12px;
+          font-weight: 700;
+          margin: 0px 17px;
+          padding: 0 5px;
+          border-bottom: 2px solid transparent;
+          cursor: pointer;
+          transition: all 0.2s ease-in; }
+          .header .nav__menu .menu .menu-item:hover {
+            border-bottom: 2px solid #00C1DA; }
+          .header .nav__menu .menu .menu-item:last-child {
+            margin-right: 40px; }
+      .header .nav__menu .btn {
         display: flex;
+        text-transform: uppercase;
+        width: 110px;
+        height: 30px;
+        font-size: 12px;
+        font-weight: 700;
         align-items: center;
         justify-content: center;
         cursor: pointer;
-        border-radius: 10px;
-        background-color: #00C1DA;
-        color: #fff;
-        border: none;
-        padding: 10px 10px;
-        transition: all 0.4s ease-in; }
-        .page-wrap .header .content-seach-input .btn:hover {
-          box-shadow: 0 0 100px 5px rgba(0, 193, 218, 0.36); }
-  .page-wrap .footer {
-    position: absolute;
-    bottom: 0;
-    font-size: 18px;
-    font-weight: normal;
-    padding: 20px 0;
+        border-radius: 16px;
+        background-color: transparent;
+        color: #00C1DA;
+        border: 1px solid #00C1DA;
+        padding: 5px;
+        transition: all 0.2s ease-in; }
+        .header .nav__menu .btn:hover {
+          color: #fff;
+          background-color: #00C1DA;
+          box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36); }
+
+/* Search Input */
+.content-seach-input {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  bottom: 10%;
+  width: 100%;
+  margin: 0 auto;
+  background-color: transparent; }
+  .content-seach-input .content-search {
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 80px; }
-    .page-wrap .footer .footer-copy {
-      text-align: center;
-      color: #3C3C3C; }
+    height: 70px;
+    padding: 5px;
+    border-radius: 8px;
+    background-color: #fff;
+    margin-right: 15px;
+    box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2); }
+    .content-seach-input .content-search .search-select {
+      display: flex;
+      flex-basis: 20%;
+      position: relative;
+      height: 100%; }
+      .content-seach-input .content-search .search-select::before {
+        content: '';
+        position: absolute;
+        width: 1px;
+        height: 100%;
+        padding: 1px 0;
+        background-color: rgba(151, 151, 151, 0.2);
+        right: 0; }
+    .content-seach-input .content-search .search-input {
+      display: flex;
+      flex-basis: 80%; }
+      .content-seach-input .content-search .search-input .search {
+        width: 100%;
+        height: 100%;
+        border: 0;
+        font-size: 19px;
+        color: #1E2D52;
+        margin-left: 35px;
+        margin-right: 20px; }
