--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -5,5 +5,5 @@ $color-black: #000
 $color-ocean-blue: #00C1DA
 $color-gray: #3C3C3C
 
-$base-padding: 0 15px 0 15px
+$base-padding: 0 20px
 $base-margin: 15px
