--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -75,46 +75,81 @@
 					box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
 
 /* Search Input */
-.content-seach-input
-	position: absolute
-	display: flex
-	justify-content: space-between
-	align-items: center
-	bottom: 10%
+.content
 	width: 100%
-	margin: 0 auto
-	background-color: transparent
-	.content-search
+	position: relative
+	.content-title
+		margin-top: 140px
+		font-size: 100px
+		line-height: 120px
+		font-weight: 700
+		color: $color-white
+		text-align: center
+	.content-subtitle
+		display: block
+		font-size: 16px
+		line-height: 20px
+		letter-spacing: 5px
+		color: $color-ocean-blue
+		text-align: center
+	.content-seach-input
 		display: flex
+		justify-content: space-between
 		align-items: center
-		width: 100%
-		height: 70px
-		padding: 5px
+		width: 1120px
+		margin-top: 35px
+		background-color: transparent
+		.content-search
+			display: flex
+			align-items: center
+			width: 1120px
+			height: 60px
+			padding: 5px
+			border-radius: 8px
+			background-color: $color-white
+			margin-right: 15px
+			box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2)
+			.search-select
+				display: flex
+				flex-basis: 20%
+				position: relative
+				height: 100%
+				&::before
+					content: ''
+					position: absolute
+					width: 1px
+					height: 100%
+					padding: 1px 0
+					background-color: rgba(151, 151, 151, 0.2)
+					right: 0
+			.search-input
+				display: flex
+				flex-basis: 80%
+				.search
+					width: 100%
+					height: 100%
+					border: 0
+					font-size: 14px
+					color: #1E2D52
+					margin-left: 35px
+					margin-right: 20px
+	.btn
+		display: flex
+		text-transform: uppercase
+		width: 160px
+		height: 60px
+		font-size: 14px
+		font-weight: 700
+		align-items: center
+		justify-content: center
+		cursor: pointer
 		border-radius: 8px
-		background-color: $color-white
-		margin-right: 15px
-		box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2)
-		.search-select
-			display: flex
-			flex-basis: 20%
-			position: relative
-			height: 100%
-			&::before
-				content: ''
-				position: absolute
-				width: 1px
-				height: 100%
-				padding: 1px 0
-				background-color: rgba(151, 151, 151, 0.2)
-				right: 0
-		.search-input
-			display: flex
-			flex-basis: 80%
-			.search
-				width: 100%
-				height: 100%
-				border: 0
-				font-size: 19px
-				color: #1E2D52
-				margin-left: 35px
-				margin-right: 20px
+		background-color: $color-ocean-blue
+		border: none
+		color: $color-white
+		padding: 20px
+		transition: all 0.2s ease-in
+		&:hover
+			color: $color-white
+			background-color: $color-ocean-blue
+			box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
