--- a/app/css/main.css
+++ b/app/css/main.css
@@ -260,6 +260,31 @@ h1, h2, h3 {
         line-height: 24px;
         font-weight: 300;
         color: #373A39; }
+    .section .container .section-team-box {
+      display: flex;
+      align-items: center;
+      margin: 0 auto;
+      margin-top: 50px; }
+      .section .container .section-team-box .team-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 68px; }
+        .section .container .section-team-box .team-box__title {
+          font-size: 14px;
+          font-weight: 700;
+          line-height: 17px;
+          letter-spacing: 1px;
+          color: #000;
+          text-transform: uppercase;
+          margin: 14px 0; }
+        .section .container .section-team-box .team-box__subtitle {
+          font-size: 12px;
+          font-weight: 300;
+          line-height: 16px;
+          color: #656565;
+          margin-bottom: 121px; }
 
 .section__title {
   font-size: 48px;
