--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -192,6 +192,31 @@
 				line-height: 24px
 				font-weight: 300
 				color: #373A39
+		.section-team-box
+			display: flex
+			align-items: center
+			margin: 0 auto
+			margin-top: 50px
+			.team-box
+				display: flex
+				flex-direction: column
+				align-items: center
+				justify-content: center
+				margin: 0 68px
+				&__title
+					font-size: 14px
+					font-weight: 700
+					line-height: 17px
+					letter-spacing: 1px
+					color: $color-black
+					text-transform: uppercase
+					margin: 14px 0
+				&__subtitle
+					font-size: 12px
+					font-weight: 300
+					line-height: 16px
+					color: #656565
+					margin-bottom: 121px
 
 .section__title
 	font-size: 48px
