--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -427,3 +427,51 @@
 	color: $color-white
 	line-height: 16px
 	background-color: #2A2C2B
+
+.popup-fade
+	display: none
+	&::before
+		content: ''
+		background: #000
+		position: fixed;
+		left: 0
+		top: 0
+		width: 100%;
+		height: 100%
+		opacity: 0.8
+		z-index: 9999
+	.popup
+		position: fixed
+		display: flex
+		flex-direction: column
+		top: calc(50% - 30vh)
+		left: calc(50% - 300px)
+		padding: 20px
+		width: 600px
+		background: $color-white
+		border: 1px solid $color-ocean-blue
+		border-radius: 2px
+		z-index: 99999
+		opacity: 1
+		.form-title
+			font-size: 24px
+			font-weight: 300px
+			color: $color-black
+			text-align: center
+			text-transform: uppercase
+			letter-spacing: 0.5px
+		.popup-close
+			position: absolute
+			top: -5px
+			right: 15px
+			font-size: 32px
+			color: $color-ocean-blue
+		.row
+			display: flex
+			justify-content: center
+			align-items: center
+			flex-wrap: wrap
+			margin: 5px
+			.form-input
+				padding: 10px
+				margin: 10px
