--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -470,8 +470,13 @@
 			display: flex
 			justify-content: center
 			align-items: center
-			flex-wrap: wrap
 			margin: 5px
 			.form-input
-				padding: 10px
+				width: 50%
+				padding: 5px
 				margin: 10px
+			.full-w
+				width: 100%
+			.form-copy
+				margin: 5px
+			
