--- a/app/css/main.css
+++ b/app/css/main.css
@@ -537,8 +537,14 @@ h1, h2, h3 {
       margin: 5px; }
       .popup-fade .popup .row .form-input {
         width: 50%;
-        padding: 5px;
-        margin: 10px; }
+        padding: 15px;
+        margin: 10px;
+        border: 1px solid #00C1DA;
+        border-radius: 16px;
+        outline: none;
+        transition: all .5s; }
+        .popup-fade .popup .row .form-input:focus {
+          box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36); }
       .popup-fade .popup .row .full-w {
         width: 100%; }
       .popup-fade .popup .row .form-copy {
