--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -473,8 +473,14 @@
 			margin: 5px
 			.form-input
 				width: 50%
-				padding: 5px
+				padding: 15px
 				margin: 10px
+				border: 1px solid $color-ocean-blue
+				border-radius: 16px
+				outline: none
+				transition: all .5s;
+				&:focus
+					box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
 			.full-w
 				width: 100%
 			.form-copy
