--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -446,7 +446,7 @@
 		flex-direction: column
 		top: calc(50% - 30vh)
 		left: calc(50% - 300px)
-		padding: 20px
+		padding: 30px
 		width: 600px
 		background: $color-white
 		border: 1px solid $color-ocean-blue
@@ -468,12 +468,12 @@
 			color: $color-ocean-blue
 		.row
 			display: flex
-			justify-content: center
 			align-items: center
 			margin: 5px
 			.form-input
 				width: 50%
 				padding: 15px
+				height: 40px
 				margin: 10px
 				border: 1px solid $color-ocean-blue
 				border-radius: 16px
@@ -485,4 +485,25 @@
 				width: 100%
 			.form-copy
 				margin: 5px
+			.btn
+				display: flex
+				text-transform: uppercase
+				width: 130px
+				height: 40px
+				margin: 10px
+				font-size: 16px
+				font-weight: 700
+				align-items: center
+				justify-content: center
+				cursor: pointer
+				border-radius: 16px
+				background-color: transparent
+				color: $color-ocean-blue
+				border: 1px solid $color-ocean-blue
+				padding: 5px
+				transition: all 0.2s ease-in
+				&:hover
+					color: $color-white
+					background-color: $color-ocean-blue
+					box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
 			
