--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -60,6 +60,9 @@
 						text-decoration: none
 						font-size: 12px
 						font-weight: 700
+			.popup-log-open
+				border: none!important
+				margin-right: 40px!important
 			.btn
 				display: flex
 				text-transform: uppercase
@@ -503,7 +506,7 @@
 					outline: none
 					transition: all .5s;
 					&:focus
-						box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
+						box-shadow: 0 0 10px 5px rgba(0, 193, 218, 0.36)
 				.full-w
 					width: 100%
 			.form-copy
