--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,6 +17,13 @@
 	color: #ff4e4e
 	border: 1px solid #ff4e4e !important
 
+.logged-name
+	color: $color-ocean-blue
+	font-size: 14px
+	margin-right: 30px
+	font-weight: 500
+	text-decoration: underline
+
 /* Header */
 .header
 	width: 100%
@@ -38,6 +45,7 @@
 		padding: 25px 0px
 		&__menu
 			display: flex
+			align-items: center
 			.menu
 				list-style-type: none
 				display: flex
@@ -82,7 +90,7 @@
 				&:hover
 					color: $color-white
 					background-color: $color-ocean-blue
-					box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
+					box-shadow: 0 0 15px 5px rgba(0, 193, 218, 0.16)
 
 /* Search Input */
 .content
@@ -121,7 +129,7 @@
 			border-radius: 8px
 			background-color: $color-white
 			margin-right: 15px
-			box-shadow: 0 0 100px 5px rgba(50, 60, 90, 0.2)
+			box-shadow: 0 0 15px 5px rgba(50, 60, 90, 0.2)
 			.search-select
 				display: flex
 				flex-basis: 20%
@@ -177,7 +185,7 @@
 		&:hover
 			color: $color-white
 			background-color: $color-ocean-blue
-			box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
+			box-shadow: 0 0 15px 5px rgba(0, 193, 218, 0.16)
 
 
 #about-us
