--- a/app/sass/_modals.sass
+++ b/app/sass/_modals.sass
@@ -49,6 +49,12 @@
 			display: flex
 			align-items: center
 			margin: 5px
+			#employer-sumbit
+				margin-left: 5px
+			.employer-contract
+				font-size: 14px
+				font-weight: 500
+				margin: 10px 15px
 			.col
 				display: flex
 				flex-direction: column
