--- a/app/css/main.css
+++ b/app/css/main.css
@@ -171,16 +171,14 @@ h1, h2, h3 {
     background: #fff;
     -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.3);
-    border: 1px solid #1D1D1D; }
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.3); }
     .profile-dropdown .hidden-block .logged-name {
       color: #1D1D1D;
       font-size: 14px;
       font-weight: 500;
       text-decoration: none;
       position: relative;
-      margin-bottom: 15px;
-      border-bottom: 1px solid #1D1D1D; }
+      margin: 5px 0; }
 
 /* Header */
 .header {
@@ -591,14 +589,16 @@ h1, h2, h3 {
       margin-right: 15px;
       box-shadow: 0 0 15px 5px rgba(50, 60, 90, 0.2); }
       .content .content-seach-input .content-search .search-select {
-        display: flex;
+        display: block;
         flex-basis: 20%;
         position: relative;
         height: 100%;
-        justify-content: flex-start;
-        align-items: center;
-        padding: 15px 25px;
-        cursor: pointer; }
+        padding: 5px 10px;
+        cursor: pointer;
+        background: #fff;
+        font-size: 14px;
+        font-weight: 500;
+        color: #000; }
         .content .content-seach-input .content-search .search-select::before {
           content: '';
           position: absolute;
@@ -612,8 +612,31 @@ h1, h2, h3 {
           position: absolute;
           width: 16px;
           height: 9px;
-          background-image: url(../img/angle-down.svg);
-          right: 20px; }
+          top: 15px;
+          background-image: url(../img/down-arrow.svg);
+          background-repeat: no-repeat;
+          right: 10px; }
+        .content .content-seach-input .content-search .search-select .js-link {
+          width: 100%;
+          color: #000;
+          text-decoration: none; }
+          .content .content-seach-input .content-search .search-select .js-link:hover {
+            color: #353535; }
+        .content .content-seach-input .content-search .search-select .js-dropdown-list {
+          display: none;
+          position: relative;
+          left: -15px;
+          list-style-type: none;
+          margin: 8px 0 0 0;
+          padding: 0;
+          width: 100%; }
+          .content .content-seach-input .content-search .search-select .js-dropdown-list .js-dropdown-option {
+            width: 100%;
+            padding: 10px 20px;
+            background: #fff;
+            border-bottom: 1px solid #e7e7e7; }
+            .content .content-seach-input .content-search .search-select .js-dropdown-list .js-dropdown-option:hover {
+              background: #e7e7e7; }
       .content .content-seach-input .content-search .search-input {
         display: flex;
         flex-basis: 80%; }
