--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -31,15 +31,13 @@
 		-moz-box-shadow: 0 5px 5px rgba(0,0,0,0.3)
 		-webkit-box-shadow: 0 5px 5px rgba(0,0,0,0.3)
 		box-shadow: 0 0px 5px rgba(0,0,0,0.3)
-		border: 1px solid #1D1D1D
 		.logged-name
 			color: #1D1D1D
 			font-size: 14px
 			font-weight: 500
 			text-decoration: none
 			position: relative
-			margin-bottom: 15px
-			border-bottom: 1px solid #1D1D1D
+			margin: 5px 0
 
 /* Header */
 .header
