--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -59,14 +59,16 @@
 			margin-right: 15px
 			box-shadow: 0 0 15px 5px rgba(50, 60, 90, 0.2)
 			.search-select
-				display: flex
+				display: block
 				flex-basis: 20%
 				position: relative
 				height: 100%
-				justify-content: flex-start
-				align-items: center
-				padding: 15px 25px
+				padding: 5px 10px
 				cursor: pointer
+				background: $color-white
+				font-size: 14px
+				font-weight: 500
+				color: $color-black
 				&::before
 					content: ''
 					position: absolute
@@ -80,8 +82,31 @@
 					position: absolute
 					width: 16px
 					height: 9px
-					background-image: url(../img/angle-down.svg)
-					right: 20px
+					top: 15px
+					background-image: url(../img/down-arrow.svg)
+					background-repeat: no-repeat
+					right: 10px
+				.js-link
+					width: 100%
+					color: $color-black
+					text-decoration: none
+					&:hover
+						color: #353535
+				.js-dropdown-list
+					display: none
+					position: relative
+					left: -15px
+					list-style-type: none
+					margin: 8px 0 0 0
+					padding: 0
+					width: 100%
+					.js-dropdown-option
+						width: 100%
+						padding: 10px 20px
+						background: $color-white
+						border-bottom: 1px solid #e7e7e7
+						&:hover
+							background: #e7e7e7
 			.search-input
 				display: flex
 				flex-basis: 80%
