--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -100,6 +100,8 @@
 					margin: 8px 0 0 0
 					padding: 0
 					width: 100%
+					max-height: 30vh
+					overflow: auto
 					.js-dropdown-option
 						width: 100%
 						padding: 10px 20px
