--- a/app/sass/vacancy.sass
+++ b/app/sass/vacancy.sass
@@ -261,7 +261,7 @@
 					font-size: 20px
 					font-weight: 400
 					line-height: 23px
-					padding: 10px 25px 10px 0
+					padding: 5px 25px 5px 0
 					position: relative
 					&__title
 						color: $color-ocean-blue
@@ -274,6 +274,9 @@
 						max-height: 42px
 					&__date
 						font-size: 14px !important
+					&__phone
+						font-size: 12px !important
+						color: #909090 !important
 					&__respond
 						font-size: 14px
 						font-weight: 500
