--- a/app/css/vacancy.css
+++ b/app/css/vacancy.css
@@ -230,6 +230,17 @@ input[type='search']::-webkit-search-results-decoration {
 h1, h2, h3 {
   margin: 0; }
 
+.text-description {
+  resize: vertical;
+  max-height: 130px;
+  min-height: 130px;
+  max-width: 100%;
+  min-width: 100%;
+  padding: 10px;
+  border: 1px solid #00C1DA;
+  outline: none;
+  border-radius: 4px; }
+
 .popup-fade {
   display: none; }
   .popup-fade::before {
