--- a/app/sass/_modals.sass
+++ b/app/sass/_modals.sass
@@ -2,6 +2,17 @@
 @import "base"
 @import "vars"
 
+.text-description
+	resize: vertical
+	max-height: 130px
+	min-height: 130px
+	max-width: 100%
+	min-width: 100%
+	padding: 10px
+	border: 1px solid #00C1DA
+	outline: none
+	border-radius: 4px
+
 .popup-fade
 	display: none
 	&::before
