--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -20,16 +20,16 @@
 	color: #ff4e4e
 	border: 1px solid #ff4e4e !important
 
-.text-description
-	resize: vertical
-	max-height: 130px
-	min-height: 130px
-	max-width: 100%
-	min-width: 100%
-	padding: 10px
-	border: 1px solid #00C1DA
-	outline: none
-	border-radius: 4px
+// .text-description
+// 	resize: vertical
+// 	max-height: 130px
+// 	min-height: 130px
+// 	max-width: 100%
+// 	min-width: 100%
+// 	padding: 10px
+// 	border: 1px solid #00C1DA
+// 	outline: none
+// 	border-radius: 4px
 
 /* Search Input */
 .content
